<resources>
    <string name="app_name">THƯ VIỆN CAO ĐẲNG VIỄN ĐÔNG</string>
    <string name="information">Thông Tin</string>
    <string name="books">Sách Yêu Thích</string>
    <string name="home">Trang Chủ</string>
    <string name="borrowBooks">Sách Đã Mượn</string>
    <string name="name_colleges">CAO ĐẲNG VIỄN ĐÔNG</string>
    <string name="adminLog">Mã Số Admin</string>
    <string name="admin_password">Mật Khẩu Admin</string>
    <string name="log_in">Đăng Nhập</string>
    <string name="mssv">Mã số sinh viên</string>
    <string name="password_vi">Mật Khẩu</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="borrowingBook">Sách đang mượn</string>
    <string name="returnedBook">Sách đã trả</string>
    <string name="view_more">Xem Thêm</string>
    <string name="recentAddBook">Sách vừa thêm</string>
    <string name="RecentBorrowingBooks">Số lượng sách đang mượn</string>
    <string name="title_activity_home_admin">HomeAdminActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home_user">HomeUserActivity</string>
    <string name="managerBook">Quản lý sách</string>
    <string name="managerAccount">Quản lý tài khoản</string>
    <string name="search">Search your book</string>
    <string name="qr_code">QR Code</string>
    <string name="background_infor">background_infor</string>
    <string name="back">back</string>
    <string name="avatar">avatar</string>
    <string name="my_information">Thông tin cá nhân</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="log_out">Đăng xuất</string>
    <string name="search_here">Tìm Kiếm Ở Đây</string>
    <string name="add">Thêm</string>
    <string name="delete">Xóa</string>
    <string name="repair">Sửa</string>
    <string name="logo">logo</string>
    <string name="scanner">scanner</string>
    <string name="id_book">ID Sách</string>
    <string name="name_book">Tên Sách</string>
    <string name="id_author">ID Tác Giả</string>
    <string name="id_category">ID Thể Loại</string>
    <string name="id_nxb">ID NXB</string>
    <string name="namxb">Năm Xuất Bản</string>
    <string name="amount">Số Lượng</string>
    <string name="position">Vị Trí</string>
    <string name="name_author">Tên Tác Giả</string>
    <string name="birthday">Năm-Tháng-Ngày</string>
    <string name="select_author">Chọn Tác Giả</string>
    <string name="searchThreeDot">Tìm Kiếm..</string>
    <string name="code_book">Mã Sách</string>
    <string name="gone_back">gone_back</string>
    <string name="star">star</string>
    <string name="image_book">imageBook</string>
    <string name="none">none</string>
    <string name="comfirm_give_back">Xác Nhận Hoàn Trả</string>

    <string-array name="book_list">
        <item></item>
    </string-array>
</resources>