<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <EditText
            android:id="@+id/search_inputauthor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/search_here"
            android:minHeight="48dp"
            android:inputType="text"
            android:importantForAutofill="no"/>

        <ImageView
            android:id="@+id/search_outputauthor"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_search"
            android:contentDescription="@string/search"/>

        <ImageView
            android:id="@+id/addAuthor"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_add"
            android:contentDescription="@string/add"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listview_author"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>